set server to prod and allow input image url
